@@ -16,6 +16,7 @@ class RspecGenerator < Rails::Generator::Base
       m.directory 'spec'
       m.template  'spec_helper.rb',                'spec/spec_helper.rb'
       m.file      'spec.opts',                     'spec/spec.opts'
+      m.file      'rcov.opts',                     'spec/rcov.opts'
       m.file      'script/spec_server',            'script/spec_server', script_options
       m.file      'script/spec',                   'script/spec',        script_options
 
